# lucasms-samuelvpo-wine-mlops-solution

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: deploy.yml
mlartifacts/1/models/m-26a00639d0d4492aad7f06db3e14a50c/artifacts/: MLmodel
mlartifacts/1/models/m-86a817b9901a45d78adcbeeac8c8e55d/artifacts/: MLmodel
mlartifacts/1/models/m-adb152ebbb5d48cf9a1ccac3622a7191/artifacts/: MLmodel
mlartifacts/1/models/m-c64af8005ba84bc1a9c2365c0494dbf2/artifacts/: MLmodel
scripts/: bootstrap_champion.py
src/: data.py  evaluate.py  promote.py  train.py
src/api/: main.py
tests/: test_api.py  test_data.py
