[project]
name = "wine-mlops"
version = "1.0.0"
description = "Solução de referência da Atividade Avaliativa — MLOps iCEV 2026"
requires-python = ">=3.11,<3.13"
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "mlflow>=2.16",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "joblib>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
